fix up treeview test